added user page
